# robot-cafe

./: README.md  pyproject.toml
src/: NOTES.md  server.py  solver.py
src/robot_cafe/: server.py  solver.py
tests/: test_solver.py
